# Proyecto

./: .buildinfo  LICENSE  README.md  ejecutar.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
_modules/: index.html
_modules/Proyecto/: solvers.html
_sources/: index.rst.txt
docs/: conf.py
exact_cover/: __init__.py  solver.py  solver_base.py
exact_cover.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: exact_cover_demo.ipynb
src/Proyecto/: solvers.py
tests/: conftest.py  test_exact_cover.py  test_solvers.py
